--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,13 +1,4 @@
-<h1>Create new question</h1>
+<h1><%= question_header(:create) %></h1>
 
-<%= form_for :question, url: {action: "create"} do |f| %>
-  <%= f.label :body %>
-  <%= f.text_field :body %>
-  <br>
+<%= render "form" %>
 
-  <%= f.label :answer %>
-  <%= f.text_field :answer %>
-  <br>
-
-  <%= f.submit "Create" %>
-<% end %>
