added tests controller and fixes for questions

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,2 +1,2 @@
-<p><%= year %> Kirill Kozyrev <%= link_to "Test Guru", github_url("fkyeaseaking", "TestGuru"), target: "_blank", rel: "nofollow" %></p>
+<p><%= year %> Kirill Kozyrev <%= github_url(author: "fkyeaseaking", repo: "TestGuru", name: "TestGuru") %></p>
 <p><%= link_to "Training project in online school Thinknetica", "https://thinknetica.com", target: "_blank", rel: "nofollow" %></p>
