--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -3,7 +3,7 @@
 <h2>Questions:</h2>
 
 <p>
-  <%= link_to "New question", new_test_question_path %>
+  <%= link_to "New question", new_test_question_path(@test) %>
 </p>
 
 <table>
