--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_with model: [@test, @question], local: true do |f| %>
-  <% if @question.errors.present? %>
-    <div>
-      <h2><%= pluralize(@test.errors.count, "error") %> detected:</h2>
-
-      <ul>
-        <% @question.errors.full_messages do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'shared/errors', resource: @question %>
 
   <%= f.label :body %>
   <%= f.text_field :body %>
