--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,6 +1,10 @@
 <h1>Passing the <%= @test_passage.test.title %> test</h1>
 
 <b>
+  <%= @test_passage.progress %> / <%= @test_passage.test.questions.count %>
+</b>
+
+<b>
   <%= @test_passage.current_question.body %>
 </b>
 
